working on the sponsors section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,31 @@
             </div>
         </div>
         <!-- end of hero section -->
+
+
+        <!-- sponsors section -->
+        <div class="sponsors">
+            <h3>Our Sponsors:</h3>
+
+            <div class="sponsor-image">
+
+                <img src="./img/sponsor1.png" alt="">
+
+
+                <img src="./img/sponsor2.png" alt="">
+
+
+                <img src="./img/sponsor3.png" alt="">
+
+
+                <img src="./img/sponsor4.png" alt="">
+
+                <img src="./img/sponsor5.png" alt="">
+
+            </div>
+        </div>
+
+        <!-- end sponsors section -->
     </div>
 </body>
 
