working on the description section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,36 @@
         </div>
 
         <!-- end sponsors section -->
+
+
+        <!-- description -->
+
+        <div class="description">
+            <div class="d-header">
+                <h3>Welcome to charitable non-profit and NGO organization</h3>
+            </div>
+
+            <div class="d-cards">
+                <div class="card" id="verity">
+                    <h1>01</h1>
+                    <h3>Verity</h3>
+                    <p>We track every dollar you raise, and show the projects you helped fund with photos.</p>
+                </div>
+
+                <div class="card" id="transparency">
+                    <h1>02</h1>
+                    <h3>Transparency</h3>
+                    <p>Private donors cover our operating costs so 100% of your money can fund charity.</p>
+                </div>
+
+                <div class="card" id="purposefulness">
+                    <h1>03</h1>
+                    <h3>Purposefulness</h3>
+                    <p>We are aimed at an investment in the community's future. We’ll share the most.</p>
+                </div>
+            </div>
+        </div>
+        <!-- end description -->
     </div>
 </body>
 
