--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
             </div>
         </div>
         <!-- end description -->
+
+        <!-- banner section -->
+
+        <div class="banner">
+
+            <!-- banner image -->
+
+            <div class="banner-image">
+                <img src="./img/banner.jpeg" alt="banner">
+            </div>
+
+            <!-- banner text -->
+            <div class="banner-text">
+                <h3>We believe that access to affordable finance is the greatest barrier to quality education in Africa.</h3>
+                <button>Donate Now</button>
+            </div>
+        </div>
+        <!-- end of banner section -->
     </div>
 </body>
 
