--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3>Give a helping hand to those who need it!</h3>
                 <p>Millions of families in America go hungry every year.</p>
 
-                <button>Donate Now</button>
+                <button class="donation">Donate Now</button>
             </div>
 
             <!-- hero image -->
@@ -141,7 +141,7 @@
             <!-- banner text -->
             <div class="banner-text">
                 <h3>We believe that access to affordable finance is the greatest barrier to quality education in Africa.</h3>
-                <button>Donate Now</button>
+                <button class="donation">Donate Now</button>
             </div>
         </div>
         <!-- end of banner section -->
