--- a/index.html
+++ b/index.html
@@ -145,6 +145,50 @@
             </div>
         </div>
         <!-- end of banner section -->
+
+
+        <!-- events section -->
+
+        <div class="events">
+
+            <!-- header -->
+
+            <div class="e-head">
+                <h1>Our Events</h1>
+                <p>We advance the common good in communities across the world. Our focus is on education, income, and health</p>
+            </div>
+
+            <div class="e-gallery">
+
+                <div class="e-card">
+                    <img src="./img/event1.jpeg" alt="event1">
+                    <h3>Meal packaging and delivery</h3>
+                    <p>
+                        <i class="fas fa-date"></i> 06.01.2021
+                    </p>
+                    <button>More</button>
+                </div>
+
+                <div class="e-card">
+                    <img src="./img/event2.jpeg" alt="event2">
+                    <h3>Give the gifts for children</h3>
+                    <p>
+                        <i class="fas fa-date"></i> 06.01.2021
+                    </p>
+                    <button>More</button>
+                </div>
+
+                <div class="e-card">
+                    <img src="./img/event3.jpeg" alt="event3">
+                    <h3>Purpose-driven brand ambassadors</h3>
+                    <p>
+                        <i class="fas fa-date"></i> 06.01.2021
+                    </p>
+                    <button>More</button>
+                </div>
+            </div>
+        </div>
+        <!-- end of events section -->
     </div>
 </body>
 
