--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <img src="./img/event1.jpeg" alt="event1">
                     <h3>Meal packaging and delivery</h3>
                     <p>
-                        <i class="fas fa-date"></i> 06.01.2021
+                        <i class="fas fa-calendar-alt"></i> 06.01.2021
                     </p>
                     <button>More</button>
                 </div>
@@ -173,7 +173,7 @@
                     <img src="./img/event2.jpeg" alt="event2">
                     <h3>Give the gifts for children</h3>
                     <p>
-                        <i class="fas fa-date"></i> 06.01.2021
+                        <i class="fas fa-calendar-alt"></i> 06.01.2021
                     </p>
                     <button>More</button>
                 </div>
@@ -182,7 +182,7 @@
                     <img src="./img/event3.jpeg" alt="event3">
                     <h3>Purpose-driven brand ambassadors</h3>
                     <p>
-                        <i class="fas fa-date"></i> 06.01.2021
+                        <i class="fas fa-calendar-alt"></i> 06.01.2021
                     </p>
                     <button>More</button>
                 </div>
