--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
             </div>
         </div>
         <!-- end of events section -->
+
+        <!-- help -->
+
+        <div class="help">
+            <h3>We need your help for escue child</h3>
+            <p>You believe, as we do, that every child deserves a future. Every last child</p>
+            <button class="donation">Donate Now</button>
+        </div>
+        <!-- end help -->
     </div>
 </body>
 
