--- a/index.html
+++ b/index.html
@@ -198,6 +198,33 @@
             <button class="donation">Donate Now</button>
         </div>
         <!-- end help -->
+
+        <!-- footer -->
+
+        <div class="footer">
+            <div class="contact-us">
+                <h3>Contact Us</h3>
+                <div class="contact-details">
+                    <p>T: 123-456-7890</p>
+                    <p>H: T-F: 7am – 3pm, S-SU: 8am – 3pm</p>
+                    <p>L: 348S, 11th St. Philly, NY 24107</p>
+                </div>
+                <p>E: <a href="hello@yourdomain.com">hello@yourdomain.com</a></p>
+
+                <div class="copyright">
+                    <p>2021 © Logo. All Rights Reserved.</p>
+                    <p><a href="#"> Privacy Policy</a></p>
+                </div>
+            </div>
+
+            <div class="social">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </div>
+
+        </div>
+        <!-- ed of footer -->
     </div>
 </body>
 
