--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <p>H: T-F: 7am – 3pm, S-SU: 8am – 3pm</p>
                     <p>L: 348S, 11th St. Philly, NY 24107</p>
                 </div>
-                <p>E: <a href="hello@yourdomain.com">hello@yourdomain.com</a></p>
+                <p id="address">E: <a href="hello@yourdomain.com">hello@yourdomain.com</a></p>
 
                 <div class="copyright">
                     <p>2021 © Logo. All Rights Reserved.</p>
@@ -218,11 +218,21 @@
             </div>
 
             <div class="social">
+                <h3>Social</h3>
                 <a href="#">Facebook</a>
                 <a href="#">Instagram</a>
                 <a href="#">Twitter</a>
             </div>
 
+
+            <div class="subscribe">
+                <h3>Subscribe</h3>
+
+                <form action="#">
+                    <input type="email" placeholder="Your email address">
+                    <button>Join</button>
+                </form>
+            </div>
         </div>
         <!-- ed of footer -->
     </div>
