--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="./about/about.html">About</a></li>
                     <li><a href="#">Support Us</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Contacts</a></li>
