working on the relief section

--- a/about/about.html
+++ b/about/about.html
@@ -36,7 +36,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./about/about.html" class="active">About</a></li>
                     <li><a href="#">Support Us</a></li>
                     <li><a href="#">Events</a></li>
@@ -51,6 +51,29 @@
         </header>
 
         <!-- end of header -->
+
+        <!-- introduction -->
+
+        <div class="about-introduction">
+            <h3>All about <br> our organization</h3>
+            <p>We advance the common good in communities across the world. Our focus is on education, income, and health—the building blocks for a good quality of life. Join our team to make good deeds together</p>
+        </div>
+        <!-- end introduction -->
+
+
+        <!-- relief food -->
+
+        <div class="relief">
+            <div class="relief-image">
+                <img src="../img/ngo.jpeg" alt="relief">
+            </div>
+
+            <div class="relief-text">
+                <h3>Welcome to charitable non-profit and NGO organization</h3>
+                <p>We’re on a mission to solve the poor crisis and reinvent charity for a new generation. Our kids should live in a better world</p>
+            </div>
+        </div>
+        <!-- end relief food -->
     </div>
 </body>
 
