working on the principles

--- a/about/about.html
+++ b/about/about.html
@@ -74,6 +74,34 @@
             </div>
         </div>
         <!-- end relief food -->
+
+
+        <!-- principles -->
+
+        <div class="principles">
+
+            <!-- vision -->
+
+            <div class="p-container">
+                <h1>Our Vision</h1>
+                <p>We see equal value in all lives. And so we are dedicated to improving the quality of life for individuals around the world. From the education of students in</p>
+                <p>Chicago, to the health of a young mother in Nigeria, we are catalysts of human promise everywhere.</p>
+            </div>
+
+            <!-- mission -->
+            <div class="p-container">
+                <h1>Our Mission</h1>
+                <p>We want to create such a world where every community is a strong one, with jobs that pay a livable wage, good schools, and a healthy environment.</p>
+                <p>We engage organizations in innovative solutions to transform vision into reality.</p>
+            </div>
+
+            <!-- mandate -->
+            <div class="p-container">
+                <h1>Mandate</h1>
+                <p>From poverty to health, to education, our areas of focus offer the opportunity to dramatically improve the quality of life for billions of people</p>
+            </div>
+        </div>
+        <!-- end perinciples -->
     </div>
 </body>
 
