--- a/about/about.html
+++ b/about/about.html
@@ -102,6 +102,53 @@
             </div>
         </div>
         <!-- end perinciples -->
+
+
+        <!-- help -->
+
+        <div class="help">
+            <h3>We need your help for escue child</h3>
+            <p>You believe, as we do, that every child deserves a future. Every last child</p>
+            <button class="donation">Donate Now</button>
+        </div>
+        <!-- end help -->
+
+        <!-- footer -->
+
+        <div class="footer">
+            <div class="contact-us">
+                <h3>Contact Us</h3>
+                <div class="contact-details">
+                    <p>T: 123-456-7890</p>
+                    <p>H: T-F: 7am – 3pm, S-SU: 8am – 3pm</p>
+                    <p>L: 348S, 11th St. Philly, NY 24107</p>
+                </div>
+                <p id="address">E: <a href="hello@yourdomain.com">hello@yourdomain.com</a></p>
+            </div>
+
+            <div class="social">
+                <h3>Social</h3>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </div>
+
+
+            <div class="subscribe">
+                <h3>Subscribe</h3>
+
+                <form action="#">
+                    <input type="email" placeholder="Your email address">
+                    <button>Join</button>
+                </form>
+            </div>
+        </div>
+        <!-- ed of footer -->
+
+        <div class="copyright">
+            <p>2021 © Logo. All Rights Reserved.</p>
+            <p><a href="#"> Privacy Policy</a></p>
+        </div>
     </div>
 </body>
 
