--- a/about/about.html
+++ b/about/about.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="./about/about.html" class="active">About</a></li>
-                    <li><a href="#">Support Us</a></li>
+                    <li><a href="../support/support.html">Support Us</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Contacts</a></li>
                     <li><a href="#" class="btn">Donate</a></li>
