working on the support page

--- a/support/support.html
+++ b/support/support.html
@@ -51,6 +51,31 @@
 
     <!-- end of header -->
 
+    <div class="support-intro">
+        
+        <div class="intro-head">
+            <h3>Support Us</h3>
+            <p>To turn caring into action, we need to see a problem, find a solution, and deliver impact</p>
+        </div>
+
+        <div class="support-forms">
+            <div class="forms">
+                <h1>01</h1>
+
+            <h3>Volunteer</h3>
+            <p>
+                An equal world is a better world. Give with us to accelerate equality, empowerment, and opportunity for women and girls.
+            </p>
+            </div>
+
+            <div class="forms">
+                <h1>02</h1>
+
+            <h3>Fundraise</h3>
+            <p>When you donate to GiveWell, you make the world better. Join us to end inequity and to improve and save lives.</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <body>
