working on the support page

--- a/support/support.html
+++ b/support/support.html
@@ -60,7 +60,7 @@
 
         <div class="support-forms">
             <div class="forms">
-                <h1>01</h1>
+                <h1 id="volunteer">01</h1>
 
             <h3>Volunteer</h3>
             <p>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="forms">
-                <h1>02</h1>
+                <h1 id="fundraise">02</h1>
 
             <h3>Fundraise</h3>
             <p>When you donate to GiveWell, you make the world better. Join us to end inequity and to improve and save lives.</p>
