working on support page

--- a/support/support.html
+++ b/support/support.html
@@ -51,6 +51,8 @@
 
     <!-- end of header -->
 
+
+    <!-- section intro -->
     <div class="support-intro">
         
         <div class="intro-head">
@@ -76,6 +78,47 @@
             </div>
         </div>
     </div>
+
+    <!-- end of section intro -->
+
+    <!-- donation modes -->
+
+    <div class="d-modes">
+        <h1>Ways you can donate</h1>
+
+        <div class="modes">
+            
+            <div class="mode-container">
+                <img src="../img/person.png" alt="person">
+                <h3>In Person</h3>
+                <p>
+                    You can make a donation visiting our office. Use the address below to find our location and make sure our intentions are real.
+                </p>
+                <p id="address">348S, 11th St. Philly, NY 24107</p>
+            </div>
+
+            <div class="mode-container">
+                <img src="../img/phone.png" alt="phone">
+                <h3>Over the Phone</h3>
+                <p>Call us on our hotline and the specialists will tell you how it is better to make a payment. They will also discuss your intentions.</p>
+                <a href="123-456-7890">123-456-7890</a>
+            </div>
+
+            <div class="mode-container">
+                <img src="../img/online.png" alt="online">
+                <h3>Online</h3>
+               <p>You can donate directly from our website using “Donate” buttons and filling the special forms. It will take a few minutes.</p>
+            </div>
+
+            <div class="mode-container">
+                <img src="../img/email.png" alt="email">
+                <h3>By Email</h3>
+                <p>Send a request to our team and they will receive you an answer with all possible ways how you can make a payment.</p>
+                <p id="address">348S, 11th St. Philly, NY 24107</p>
+            </div>
+        </div>
+    </div>
+    <!-- end of daonation modes -->
 </div>
 
 <body>
