working on support page

--- a/support/support.html
+++ b/support/support.html
@@ -90,7 +90,7 @@
             
             <div class="mode-container">
                 <img src="../img/person.png" alt="person">
-                <h3>In Person</h3>
+                <h3>In person</h3>
                 <p>
                     You can make a donation visiting our office. Use the address below to find our location and make sure our intentions are real.
                 </p>
@@ -114,9 +114,10 @@
                 <img src="../img/email.png" alt="email">
                 <h3>By Email</h3>
                 <p>Send a request to our team and they will receive you an answer with all possible ways how you can make a payment.</p>
-                <p id="address">348S, 11th St. Philly, NY 24107</p>
+                <a href="hello@yourdomain.com">hello@yourdomain.com</a>
             </div>
         </div>
+        <button class="donation">Donate</button>
     </div>
     <!-- end of daonation modes -->
 </div>
