working on support page

--- a/support/support.html
+++ b/support/support.html
@@ -117,7 +117,7 @@
                 <a href="hello@yourdomain.com">hello@yourdomain.com</a>
             </div>
         </div>
-        <button class="donation">Donate</button>
+        <button class="btn">Donate</button>
     </div>
     <!-- end of daonation modes -->
 </div>
