--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li><a href="./about/about.html">About</a></li>
                     <li><a href="./support/support.html">Support Us</a></li>
                     <li><a href="#">Events</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="./contact/contact.html">Contacts</a></li>
                     <li><a href="#" class="btn">Donate</a></li>
                 </ul>
             </nav>
