working on contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -74,6 +74,8 @@
                     <br>
 
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+
+                    <button class="donation">Submit Now</button>
                 </form>
             </div>
         </div>
