--- a/support/support.html
+++ b/support/support.html
@@ -30,8 +30,10 @@
 
     <header>
         <div class="logo">
-            <img src="../img/logo.png" alt="">
-        </div>
+            <a href="../index.html">
+             <img src="../img/logo.png" alt="">
+            </a>
+         </div>
 
         <nav>
             <ul>
@@ -39,7 +41,7 @@
                 <li><a href="../about/about.html">About</a></li>
                 <li><a href="./support.html" class="active">Support Us</a></li>
                 <li><a href="#">Events</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="../contact/contact.html">Contacts</a></li>
                 <li><a href="#" class="btn">Donate</a></li>
             </ul>
         </nav>
