--- a/about/about.html
+++ b/about/about.html
@@ -31,16 +31,18 @@
 
         <header>
             <div class="logo">
-                <img src="../img/logo.png" alt="">
-            </div>
+                <a href="../index.html">
+                 <img src="../img/logo.png" alt="">
+                </a>
+             </div>
 
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="./about/about.html" class="active">About</a></li>
+                    <li><a href="./about.html" class="active">About</a></li>
                     <li><a href="../support/support.html">Support Us</a></li>
                     <li><a href="#">Events</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="../contact/contact.html">Contacts</a></li>
                     <li><a href="#" class="btn">Donate</a></li>
                 </ul>
             </nav>
