--- a/contact/contact.html
+++ b/contact/contact.html
@@ -29,14 +29,16 @@
 
         <header>
             <div class="logo">
-                <img src="../img/logo.png" alt="">
-            </div>
+                <a href="../index.html">
+                 <img src="../img/logo.png" alt="">
+                </a>
+             </div>
 
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="./about/about.html">About</a></li>
-                    <li><a href="./support/support.html">Support Us</a></li>
+                    <li><a href="../about/about.html">About</a></li>
+                    <li><a href="../support/support.html">Support Us</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="./contact.html" class="active">Contacts</a></li>
                     <li><a href="#" class="btn">Donate</a></li>
