--- a/about/about.html
+++ b/about/about.html
@@ -152,6 +152,18 @@
             <p><a href="#"> Privacy Policy</a></p>
         </div>
     </div>
+
+    <!-- JQUERY CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    
+    <!-- internal javascript -->
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.toggle').click(function(){
+                $('nav').toggleClass('active')
+            })
+        })
+    </script>
 </body>
 
 </html>
