--- a/support/support.html
+++ b/support/support.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="./support.css">
 </head>
-
+<body>
 <div class="container">
     <!-- header -->
 
@@ -170,8 +170,18 @@
 
 </div>
 
-<body>
 
+    <!-- JQUERY CDN -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    
+    <!-- internal javascript -->
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.toggle').click(function(){
+                $('nav').toggleClass('active')
+            })
+        })
+    </script>
 </body>
 
 </html>
