fixing the chevron

--- a/about/about.html
+++ b/about/about.html
@@ -153,6 +153,10 @@
         </div>
     </div>
 
+    <!-- chevron -->
+    <button onclick="topFunction()" id="myBtn"><i class="fas fa-chevron-up"></i></button> 
+
+
     <!-- JQUERY CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     
@@ -164,6 +168,9 @@
             })
         })
     </script>
+
+    <!-- MAIN JS -->
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
