--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="./support/support.html">Support Us</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="./contact/contact.html">Contacts</a></li>
-                    <li><a href="#" class="btn">Donate</a></li>
+                    <li><a href="https://www.paypal.com/donate" target="_blank" class="btn">Donate</a></li>
                 </ul>
             </nav>
 
